[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "dockerspawner"
dynamic = [
  "version",
]
description = "Dockerspawner: A custom spawner for JupyterHub using Docker"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
  "Framework :: Jupyter",
]
keywords = [
  "docker",
  "jupyter",
  "jupyterhub",
]
dependencies = [
  "docker",
  "escapism",
  "jupyterhub>=4",
]

[project.urls]
Documentation = "https://jupyterhub-dockerspawner.readthedocs.io"
Source = "https://github.com/jupyterhub/dockerspawner"
Issues = "https://github.com/jupyterhub/dockerspawner/issues"

[project.optional-dependencies]
test = [
  "psutil",
  "pytest",
  "pytest-asyncio>=0.25",
  "pytest-cov",
]

[project.entry-points."jupyterhub.spawners"]
docker = "dockerspawner:DockerSpawner"
docker-system-user = "dockerspawner:SystemUserSpawner"
docker-swarm = "dockerspawner:SwarmSpawner"

[tool.hatch.version]
path = "dockerspawner/_version.py"


# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# black is used for autoformatting Python code
#
# ref: https://black.readthedocs.io/en/stable/
#
[tool.black]
skip-string-normalization = true


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10 --maxfail=1"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = [
  "tests",
]
# These markers are registered to avoid warnings triggered by importing from
# jupyterhub.tests.test_api.
markers = [
  "role",
  "user",
  "slow",
  "group",
  "services",
]


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/jupyterhub/dockerspawner"

[tool.tbump.version]
current = "14.1.0.dev"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "setup.py"

[[tool.tbump.file]]
src = "dockerspawner/_version.py"
